# PromptFuzz-CLI

./: .gitignore  README.md  prompts.txt  pyproject.toml  report1.html  run.bat  run.sh  test.txt
src/: cli.py  report.html
tests/: test_cli.py
